--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
     "@swc/core": "^1.2.148",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
+    "@types/supertest": "^6.0.3",
     "jest": "^27.5.1",
+    "supertest": "^7.1.1",
     "ts-node": "^10.6.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "dependencies": {
+    "@types/express": "^5.0.1",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
