--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@swc/core": "^1.2.148",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
+    "@types/jstoxml": "^5.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^27.5.1",
     "supertest": "^7.1.1",
@@ -21,11 +22,13 @@
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jstoxml": "^7.0.1",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^1.6.1"
   }
 }
